# FourierTransformerALPSCore

./: CMakeLists.txt  HowBuilt.txt  README.md  fix_tails.py  ftac_main.cpp
cmake/: FindBlasClasses.cmake  FindCluster.cmake  FindFFTW3.cmake  FindNFFT3.cmake  find_blas_lapack.cmake
test_data/: G0_omega_19  G0_omega_output  G0_tau_19  G_omega_19  G_tau_19  Greens_19.h5  paramfile  readme  sim.h5
